# COMP0197-EDA

./: .gitignore
ica2/: pyproject.toml
ica2/checkpoints/: lstm_best_20260318_170036.pt  lstm_best_20260318_171841.pt  lstm_best_20260319_145953.pt  lstm_best_20260319_174542.pt  lstm_best_20260319_175401.pt  lstm_best_20260319_175721.pt  lstm_best_20260319_195243.pt  lstm_best_20260319_195339.pt  lstm_best_20260319_195658.pt  lstm_best_20260319_195717.pt  lstm_best_20260319_201141.pt  lstm_best_20260319_203716.pt  mamba_best_20260318_170111.pt  mamba_best_20260318_170934.pt  transformer_best_20260318_170135.pt  transformer_best_20260318_170705.pt
ica2/configs/: default.yaml  lstm.yaml  lstm_no_fe.yaml  nbeats.yaml  nbeats_no_fe.yaml
ica2/logs/run_20260318_170036/: result.json
ica2/logs/run_20260318_170135/: result.json
ica2/logs/run_20260318_170705/: result.json
ica2/logs/run_20260318_170934/: result.json
ica2/logs/run_20260318_171841/: result.json
ica2/logs/run_20260319_103856/: result.json
ica2/logs/run_20260319_104847/: result.json
ica2/logs/run_20260319_110851/: result.json
ica2/logs/run_20260319_121545/: result.json
ica2/logs/run_20260319_145953/: result.json
ica2/logs/run_20260319_174542/: result.json
ica2/logs/run_20260319_175401/: result.json
ica2/logs/run_20260319_175721/: result.json
ica2/logs/run_20260319_195243/: result.json
ica2/logs/run_20260319_195339/: result.json
ica2/logs/run_20260319_195658/: result.json
ica2/logs/run_20260319_195717/: result.json
ica2/logs/run_20260319_201141/: result.json
(+26 files in other folders)
